--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "framer-motion": "^12.1.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.474.0",
-    "next": "15.4.7",
+    "next": "^15.4.7",
     "next-themes": "^0.4.4",
     "prettier": "^3.4.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
